--- a/res/layout/company_info_item.xml
+++ b/res/layout/company_info_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"/>
     
- 	<TextView
+ 	<com.narkii.security.common.ScrollForeverTextView
         android:id="@+id/text_company_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -16,8 +16,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="@string/company_name"
-        android:textIsSelectable="true" />
+        android:text="@string/company_name"/>
  	
     <LinearLayout
         android:id="@+id/text_company_header11"
@@ -29,57 +28,52 @@
             android:id="@+id/text_company_serial"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/company_serial"
-            android:textIsSelectable="true" />
+            android:text="@string/company_serial" />
 
         <TextView
             android:id="@+id/text_company_area"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/company_area"
-            android:textIsSelectable="true" />
+            android:text="@string/company_area" />
 
-        <TextView
-            android:id="@+id/text_company_address"
+		<com.narkii.security.common.ScrollForeverTextView 
+		    android:id="@+id/text_company_address"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="@string/company_address"
-            android:textIsSelectable="true" />
-
+            android:singleLine="true"
+            android:scrollHorizontally="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:text="company_addresscompany_addresscompany_addresscompany_address111"/>
         <TextView
             android:id="@+id/text_responsor"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/responsor"
-            android:textIsSelectable="true" />
+            android:text="@string/responsor"/>
 
         <TextView
             android:id="@+id/text_phone1"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/phone"
-            android:textIsSelectable="true" />
+            android:text="@string/phone" />
 
         <TextView
             android:id="@+id/text_secure_manager"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/secure_manager"
-            android:textIsSelectable="true" />
+            android:text="@string/secure_manager" />
 
         <TextView
             android:id="@+id/text_phone2"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/phone"
-            android:textIsSelectable="true" />
+            android:text="@string/phone"/>
 
         <TextView
             android:id="@+id/text_valid_date"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/valid_date"
-            android:textIsSelectable="true" />
+            android:text="@string/valid_date" />
     </LinearLayout>
 
 </LinearLayout>
