--- a/res/layout/fragment_enforcement.xml
+++ b/res/layout/fragment_enforcement.xml
@@ -2,21 +2,105 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:stretchColumns="1">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:text="TextView_enforcement fjisfidsofjdfjftttttttttttttt" 
-        android:textSize="40sp"
-        android:width="1500px"
-        android:singleLine="true"
-        android:ellipsize="marquee" 
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:textIsSelectable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        />
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/company_name"/>
+            <EditText 
+                android:id="@+id/drawer_text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/company_type"/>
+            <Spinner 
+                android:id="@+id/drawer_company_type"/>
+        </TableRow>
+         <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time"/>
+            <LinearLayout 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Spinner 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                	android:id="@+id/drawer_time"/>
+                <EditText 
+	                android:id="@+id/drawer_day"
+	                android:layout_width="80dp"
+	                android:layout_height="wrap_content"
+	                android:inputType="number"/>
+                <TextView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="天"/>
+            </LinearLayout>
+          	
+        </TableRow>
+        <TableRow 
+            android:id="@+id/tableRow4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button 
+                android:id="@+id/button_drawer_search"
+                android:text="@string/search"
+                android:layout_span="2"/>
+        </TableRow>
+    </TableLayout>
 
+     <ListView
+         android:id="@+id/list_company_name"
+         android:layout_width="0dp"
+         android:layout_height="wrap_content"
+         android:layout_weight="1" >
+     </ListView>
+	</LinearLayout>
+	
+	<TextView 
+	    android:id="@+id/select_company_title"
+	    android:layout_height="wrap_content"
+	    android:layout_width="match_parent"
+	    android:text="晋江AAA公司执法记录"/>
+	
+	<include layout="@layout/enforce_record_header"/>
+	
+	<com.narkii.security.common.HVListView 
+	    android:id="@+id/enforce_record_list"
+	    android:fastScrollEnabled="true"
+		android:fadingEdgeLength="0.0sp"
+		android:drawSelectorOnTop="false"
+		android:cacheColorHint="@null" 
+		android:dividerHeight="1.0dip"
+		android:layout_width="1000dp"
+		android:layout_height="0dp"
+		android:layout_weight="1">
+	</com.narkii.security.common.HVListView>
 </LinearLayout>
