--- a/res/layout/fragment_information.xml
+++ b/res/layout/fragment_information.xml
@@ -1,37 +1,125 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
-    android:gravity="bottom">
+    android:orientation="vertical" >
+    
+	<TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:stretchColumns="1,3">
 
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/company_name"/>
+            <EditText 
+                android:id="@+id/drawer_text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+      
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/company_type"/>
+            <Spinner 
+                android:id="@+id/drawer_company_type"/>
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/search_types"/>
+            <Spinner 
+                android:id="@+id/drawer_search_types"/>
+    
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/permission_type"/>
+            <Spinner 
+                android:id="@+id/drawer_permission_type"/>
+        </TableRow>
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/info_certificate_situ"/>
+            <Spinner 
+                android:id="@+id/drawer_certificate_situ"/>
+       
+            <TextView 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time"/>
+            
+            <TableRow >
+                <Spinner
+                    android:layout_width="wrap_content"
+                	android:layout_height="wrap_content" 
+               		android:id="@+id/drawer_time"
+               		android:layout_weight="1"/>
+                <EditText 
+	                android:id="@+id/drawer_day"
+	                android:layout_width="80dp"
+	                android:layout_height="wrap_content"
+	                android:inputType="number"/>
+                <TextView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="天"/>
+            </TableRow>
+        </TableRow>
+        
+        <TableRow 
+             android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+            <Button 
+                android:id="@+id/button_drawer_search"
+                android:text="@string/search"
+                android:layout_span="2"/>
+        </TableRow>
+    </TableLayout>
+    
 	<include layout="@layout/company_info_header"/>
-	<com.narkii.security.HVListView 
-	    android:id="@android:id/list"
+	<com.narkii.security.common.HVListView 
+	    android:id="@+id/company_info_list"
 	    android:fastScrollEnabled="true"
 		android:fadingEdgeLength="0.0sp"
 		android:drawSelectorOnTop="false"
 		android:cacheColorHint="@null" 
 		android:dividerHeight="1.0dip"
-		android:layout_width="1250dp"
+		android:layout_width="1150dp"
 		android:layout_height="0dp"
 		android:layout_weight="1">
-	</com.narkii.security.HVListView>
+	</com.narkii.security.common.HVListView>
 	
 	<LinearLayout 
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal">
-	    <Button
-		    android:id="@+id/butto_add"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="@string/add" />
-
-		<Button
-		    android:id="@+id/button_delete"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="@string/delete" />
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal" >
+	    <Button 
+	        android:layout_width="wrap_content"
+    		android:layout_height="wrap_content"
+    		android:layout_weight="1"
+	        android:id="@+id/button_add"
+	        android:text="@string/add"/>
+	    <Button 
+	        android:layout_width="wrap_content"
+    		android:layout_height="wrap_content"
+    		android:layout_weight="1"
+	        android:id="@+id/button_delete"
+	        android:text="@string/delete"/>
 	</LinearLayout>
-
 </LinearLayout>
