--- a/res/layout/fragment_enforcement.xml
+++ b/res/layout/fragment_enforcement.xml
@@ -5,83 +5,116 @@
 	<LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
+	    android:baselineAligned="false"
 	    android:orientation="horizontal">
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:stretchColumns="1">
-
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/company_name"/>
-            <EditText 
-                android:id="@+id/drawer_text_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="text"/>
-        </TableRow>
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/company_type"/>
-            <Spinner 
-                android:id="@+id/drawer_company_type"/>
-        </TableRow>
-         <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <TextView 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/time"/>
-            <LinearLayout 
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <Spinner 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                	android:id="@+id/drawer_time"/>
-                <EditText 
-	                android:id="@+id/drawer_day"
-	                android:layout_width="80dp"
+	    <TableLayout
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:stretchColumns="1"
+	        android:layout_weight="1"
+	        >
+	
+	        <TableRow
+	            android:id="@+id/tableRow1"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content" >
+	            <TextView 
+	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:inputType="number"/>
-                <TextView 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="天"/>
-            </LinearLayout>
-          	
-        </TableRow>
-        <TableRow 
-            android:id="@+id/tableRow4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button 
-                android:id="@+id/button_drawer_search"
-                android:text="@string/search"
-                android:layout_span="2"/>
-        </TableRow>
-    </TableLayout>
-
-     <ListView
-         android:id="@+id/list_company_name"
-         android:layout_width="0dp"
-         android:layout_height="wrap_content"
-         android:layout_weight="1" >
-     </ListView>
+	                android:text="@string/company_name"/>
+	            <EditText 
+	                android:id="@+id/drawer_text_name"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:inputType="text"/>
+	        </TableRow>
+	        <TableRow
+	            android:id="@+id/tableRow2"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content" >
+	            <TextView 
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="@string/company_type"/>
+	            <Spinner 
+	                android:id="@+id/drawer_company_type"/>
+	        </TableRow>
+	         <TableRow
+	            android:id="@+id/tableRow3"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content" >
+	            <TextView 
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="@string/time"/>
+	            <LinearLayout 
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:orientation="horizontal">
+	                <Spinner 
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_weight="1"
+	                	android:id="@+id/drawer_time"/>
+	                <EditText 
+		                android:id="@+id/drawer_day"
+		                android:layout_width="80dp"
+		                android:layout_height="wrap_content"
+		                android:inputType="number"/>
+	                <TextView 
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="天"/>
+	            </LinearLayout>
+	          	
+	        </TableRow>
+	        <TableRow 
+	            android:id="@+id/tableRow4"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content">
+	            <Button 
+	                android:id="@+id/button_drawer_search"
+	                android:text="@string/search"
+	                android:layout_span="2"/>
+	        </TableRow>
+	        <TableRow >
+	            <TextView 
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:text="@string/enforce_paper"/>
+	            <TableRow >
+		            <Spinner 
+		                android:id="@+id/enforce_paper_select"
+		                android:layout_width="0dp"
+		                android:layout_weight="1"
+		                android:layout_height="wrap_content"/>
+		            <Button
+		                android:id="@+id/button_paper_add"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:text="@string/enforce_paper_add"/>
+	            </TableRow>
+	        </TableRow>
+	    </TableLayout>
+		
+	    <LinearLayout 
+	        android:layout_width="0dp"
+	        android:layout_height="200dp"
+	        android:layout_weight="1"
+	        android:orientation="vertical">
+	        <TextView 
+	            android:id="@+id/company_list_title"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:text="需复查的企业"/>
+	        <ListView
+		         android:id="@+id/list_company_name"
+		         android:layout_width="wrap_content"
+		         android:layout_height="wrap_content"
+	         	  >
+	     </ListView>
+	    </LinearLayout>
+     
 	</LinearLayout>
 	
 	<TextView 
@@ -92,15 +125,18 @@
 	
 	<include layout="@layout/enforce_record_header"/>
 	
-	<com.narkii.security.common.HVListView 
+
+	<ListView 
 	    android:id="@+id/enforce_record_list"
-	    android:fastScrollEnabled="true"
-		android:fadingEdgeLength="0.0sp"
-		android:drawSelectorOnTop="false"
-		android:cacheColorHint="@null" 
-		android:dividerHeight="1.0dip"
-		android:layout_width="1000dp"
-		android:layout_height="0dp"
-		android:layout_weight="1">
-	</com.narkii.security.common.HVListView>
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1">
+	    
+	</ListView>
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delete"/>
+
 </LinearLayout>
