--- a/res/layout/company_info_header.xml
+++ b/res/layout/company_info_header.xml
@@ -1,80 +1,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/colum1"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
         android:text="@string/select"/>
  	<TextView
         android:id="@+id/colum2"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
+        android:layout_weight="4"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:singleLine="true"
         android:text="@string/company_name" />
  	
-    <LinearLayout
-        android:id="@+id/company_header11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/colum3"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/company_serial"/>
 
         <TextView
             android:id="@+id/colum4"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/company_area"/>
 
         <TextView
             android:id="@+id/colum5"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:text="@string/company_address"/>
 
         <TextView
             android:id="@+id/colum6"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/responsor" />
 
         <TextView
             android:id="@+id/colum7"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/phone"/>
-
-        <TextView
-            android:id="@+id/colum8"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/secure_manager" />
-
-        <TextView
-            android:id="@+id/colum9"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/phone"/>
 
         <TextView
             android:id="@+id/colum10"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/valid_date"/>
-    </LinearLayout>
+
 
 </LinearLayout>
