--- a/res/layout/company_info_item.xml
+++ b/res/layout/company_info_item.xml
@@ -1,44 +1,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
     <CheckBox
         android:id="@+id/company_select"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"/>
     
  	<com.narkii.security.common.ScrollForeverTextView
         android:id="@+id/text_company_name"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
+        android:layout_weight="4"
         android:layout_height="wrap_content"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="@string/company_name"/>
- 	
-    <LinearLayout
-        android:id="@+id/text_company_header11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/text_company_serial"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/company_serial" />
 
         <TextView
             android:id="@+id/text_company_area"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/company_area" />
 
 		<com.narkii.security.common.ScrollForeverTextView 
 		    android:id="@+id/text_company_address"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
+            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:scrollHorizontally="true"
@@ -47,33 +39,23 @@
             android:text="company_addresscompany_addresscompany_addresscompany_address111"/>
         <TextView
             android:id="@+id/text_responsor"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/responsor"/>
 
         <TextView
             android:id="@+id/text_phone1"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/phone" />
 
         <TextView
-            android:id="@+id/text_secure_manager"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/secure_manager" />
-
-        <TextView
-            android:id="@+id/text_phone2"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/phone"/>
-
-        <TextView
             android:id="@+id/text_valid_date"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/valid_date" />
-    </LinearLayout>
 
 </LinearLayout>
