--- a/res/layout/enforce_record_item.xml
+++ b/res/layout/enforce_record_item.xml
@@ -1,72 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 	
     <CheckBox 
         android:id="@+id/colum1"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
  	<TextView
         android:id="@+id/colum2"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/enforce_seria" />
- 	
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/colum3"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/enforce_time_law"/>
 
         <TextView
             android:id="@+id/colum4"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/enforce_form_check"/>
 
         <TextView
             android:id="@+id/colum5"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/enforce_paper"/>
-
+        
+		<LinearLayout 
+		    android:layout_width="0dp"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="2"
+		    android:orientation="vertical">
         <TextView
             android:id="@+id/colum6"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/enforce_officer" />
-
+		<TextView
+            android:id="@+id/colum8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enforce_officer" />
+		</LinearLayout>
+		<LinearLayout 
+		    android:layout_width="0dp"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="3"
+		    android:orientation="vertical">
         <TextView
             android:id="@+id/colum7"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/enforce_num_id"/>
-
-        <TextView
-            android:id="@+id/colum8"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/enforce_officer" />
 
         <TextView
             android:id="@+id/colum9"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/enforce_num_id"/>
-
+		</LinearLayout>
+		
         <TextView
             android:id="@+id/colum10"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
             android:text="@string/remark"/>
-    </LinearLayout>
+
 
 </LinearLayout>
